--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,13 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-   <h1>hacer blogpost</h1> 
-   <p>parrrafo de inicio</p>
+    <div id="container" > 
+        <div id="post">
+       <h1>hacer blogpost mas interesante</h1> 
+       <p>parrrafo de inicio esta mierda se va a descontrolar por yisus crist</p>
+       </div> 
+    
+    </div> 
+   
 </body>
 </html>
