--- a/blogpost.html
+++ b/blogpost.html
@@ -4,10 +4,15 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <div id="container" > 
+    <div id="container" >
         <div id="post">
-       <h1>hacer blogpost mas interesante</h1> 
+        <div id="cabecera">
+            cabecera
+            <h1>hacer blogpost mas interesante</h1> 
        <p>parrrafo de inicio esta mierda se va a descontrolar por yisus crist</p>
+    </div> 
+        
+       </div>
        </div> 
     
     </div> 
