finalizada la cabecera co diseño blue

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,8 +6,9 @@
 <body>
     <div id="container" >
         <div id="post">
-        <div id="cabecera">
-            cabecera
+        <div id="hiperblog">
+            hiperblog
+            <span id="tagline">este es un blog cabecera </span>
             <h1>hacer blogpost mas interesante</h1> 
        <p>parrrafo de inicio esta mierda se va a descontrolar por yisus crist</p>
     </div> 
