cambios de fuente

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,11 @@
             hiperblog
             <span id="tagline">este es un blog cabecera </span>
             <h1>hacer blogpost mas interesante</h1> 
-       <p>parrrafo de inicio esta mierda se va a descontrolar por yisus crist</p>
+       <p>parrrafo de inicio esta mierda se va a descontrolar
+           por yisus crist</p>
+       <p>te voy a hacer el amor de diferentes maneras
+           asi que prepara esas nalguitas degenerado
+       </p>
     </div> 
         
        </div>
