cambios a parrafo en master

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,13 +8,14 @@
         <div id="post">
         <div id="hiperblog">
             hiperblog
-            <span id="tagline">este es un blog cabecera </span>
+            <span id="tagline">este es un blog master perro </span>
             <h1>hacer blogpost mas interesante</h1> 
        <p>parrrafo de inicio esta mierda se va a descontrolar
            por yisus crist</p>
        <p>te voy a hacer el amor de diferentes maneras
            asi que prepara esas nalguitas degenerado
        </p>
+       <p>suscribete a tu chingada madre</p>
     </div> 
         
        </div>
