cambios de la rama footer

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,7 @@
            asi que prepara esas nalguitas degenerado
        </p>
        <p>suscribete a tu chingada madre</p>
+       <p>chingue su madre</p>
     </div> 
         
        </div>
