--- a/blogpost.html
+++ b/blogpost.html
@@ -10,10 +10,10 @@
             hiperblog
             <span id="tagline">este es un blog cabecera a wiwi genial </span>
             <h1>hacer blogpost mas interesante</h1> 
-       <p>parrrafo de inicio esta mierda se va a descontrolar
+       <p>pArrrafo de inicio esta mierda se va a descontrolar
            por yisus crist</p>
        <p>te voy a hacer el amor de diferentes maneras
-           asi que prepara esas nalguitas degenerado
+           asi que prepara esas nalguitas degenerado.
        </p>
        <p>suscribete a tu chingada madre</p>
        <p>chingue su madre</p>
