esto se va Descontrolar

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
         <div id="post">
         <div id="hiperblog">
             hiperblog
-            <span id="tagline">este es un blog cabecera a wiwi genial </span>
+            <span id="tagline">este es un blog confianza a wiwi genial </span>
             <h1>hacer blogpost mas interesante</h1> 
        <p>pArrrafo de inicio esta mierda se va a descontrolar
            por yisus crist</p>
